# mpst-inference

./: README.md  cargo.toml
inference/: Cargo.toml
inference/src/: lib.rs  merging.rs
inference/tests/: test.rs  travel_agency.rs
macros/: Cargo.toml
macros/src/: action.rs  lib.rs  parse.rs  session_type.rs
macros/tests/: test.rs
session/: Cargo.toml
session/src/: action.rs  ilt.rs  lib.rs  session_type.rs
