[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
session = {path = "../session"}
syn = {version = "*", features = ["full"]}
proc-macro2 = "1.0.76"
quote = "1.0.35"
expect-test = "1.4.1"
